# cobot

./: README.md
camera_ros/: README.md
camera_ros/src/: CMakeLists.txt  README.md
camera_ros/src/dodo_detector_ros/: README.md
camera_ros/src/dodo_detector_ros/config/: main_config.yaml
camera_ros/src/dodo_detector_ros/launch/: detect_kinect2.launch
camera_ros/src/find_object_2d/: README.md
camera_ros/src/iai_kinect2_opencv4/: README.md
catkin_ros/: README.md
catkin_ros/src/: README.md
catkin_ros/src/ar3_hardware_drivers/: README.md
catkin_ros/src/ar3_hardware_drivers/src/: TeensyDriver( ros node publish communicate version).cpp  TeensyDriver.cpp
catkin_ros/src/ar3_hardware_interface/: README.md
catkin_ros/src/ar3_hardware_interface/launch/: ar3_hardware_bringup.launch
catkin_ros/src/cobot_control/: CMakeLists.txt  README.md  package.xml
catkin_ros/src/cobot_control/launch/: move_group_demo_Object_retrieval.launch
catkin_ros/src/cobot_control/src/: draft.txt  move_group_demo( with grasp msgs).cpp  move_group_demo(chess_player_action prepare 3).cpp  move_group_demo(chess_player_action prepare 4).cpp  move_group_demo-1.cpp  move_group_demo.cpp  move_group_demo_Object_retrieval.cpp
catkin_ros/src/cobot_description/: CMakeLists.txt  README.md
catkin_ros/src/cobot_description/launch/: config.rviz
catkin_ros/src/cobot_description/urdf/: ar3.xacro  cobot.xacro  gazebo_cobot.urdf
catkin_ros/src/cobot_microcontrollers/: README.md
catkin_ros/src/cobot_microcontrollers/teensy/: README.md
catkin_ros/src/cobot_moveit_config/: package.xml
catkin_ros/src/cobot_moveit_config/config/: cobot.srdf  fake_controllers.yaml  gazebo_cobot.urdf  joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
catkin_ros/src/cobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  ompl-chomp_planning_pipeline.launch.xml  ros_controllers.launch  stomp_planning_pipeline.launch.xml
catkin_ros/src/deviation_correct/: CMakeLists.txt  README.md  package.xml
catkin_ros/src/gripper_hardware_drivers/: CMakeLists.txt  README.md
catkin_ros/src/gripper_hardware_drivers/src/: GripperDriver.cpp
catkin_ros/src/gripper_hardware_interface/: CMakeLists.txt
catkin_ros/src/gripper_hardware_interface/config/: controllers.yaml
catkin_ros/src/gripper_hardware_interface/include/gripper_hardware_interface/: gripper_hardware_interface.h
catkin_ros/src/gripper_hardware_interface/launch/: gripper_hardware_bringup.launch
catkin_ros/src/gripper_hardware_interface/src/: gripper_hardware_interface.cpp
catkin_ros_chessboard/: README.md
catkin_ros_chessboard/src/: README.md
catkin_ros_chessboard/src/chess_player/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ros_chessboard/src/chess_player/scripts/: chess_player_implementation.py  listener.py
catkin_ros_chessboard/src/chess_player/src/: chess_evaluator.cpp  chess_move_monitor.cpp  fake_chess_instruction.cpp  fake_chess_monitor.cpp
catkin_ros_chessboard/src/chessboard_microcontrollers/: README.md
catkin_ros_chessboard/src/chessboard_microcontrollers/sensor_chessboard_script/: Button.cpp  Button.hpp  sensor_chessboard_script.ino
catkin_ros_chessboard/src/chessboard_microcontrollers/sensor_chessboard_script_test/: sensor_chessboard_script_test.ino
catkin_tf_ros/: README.md
catkin_tf_ros/src/: README.md
catkin_tf_ros/src/cobot_tf/: CMakeLists.txt  package.xml
catkin_tf_ros/src/cobot_tf/launch/: tf_demo.launch
catkin_tf_ros/src/cobot_tf/src/: object_tf_broadcaster.cpp  object_tf_listener.cpp
catkin_ws/: README.md
catkin_ws/src/ar3_hardware_drivers/: package.xml
catkin_ws/src/ar3_hardware_drivers/include/ar3_hardware_drivers/: TeensyDriver( ros node publish communicate version).h
catkin_ws/src/ar3_hardware_interface/: package.xml
catkin_ws/src/ar3_hardware_interface/config/: joint_limits.yaml  joint_offsets.yaml
catkin_ws/src/ar3_hardware_interface/src/: ar3_hardware_interface( ros node publish communicate version).cpp  ar3_hardware_interface.cpp  ar3_hardware_interface_node( ros node publish communicate version).cpp  ar3_hardware_interface_node.cpp
catkin_ws/src/cobot_control/launch/: move_group_demo.launch
catkin_ws/src/cobot_control/src/: move_group_demo( with grasp msgs for coordinate record).cpp  move_group_demo(Object retrieval).cpp  move_group_demo(chess_player_action prepare 2).cpp  (+2 more)
catkin_ws/src/cobot_description/: package.xml
catkin_ws/src/gripper_hardware_drivers/: package.xml
catkin_ws/src/gripper_hardware_interface/: package.xml
catkin_ws/src/gripper_hardware_interface/config/: hardware_driver.yaml  hardware_interface.yaml  joint_limits.yaml  joint_offsets.yaml
catkin_ws/src/gripper_hardware_interface/src/: gripper_hardware_interface_node.cpp
(+35 files in other folders)
