<package format="3">
  <name>ar3_hardware_drivers</name>
  <version>0.0.0</version>
  <description>The ar3_hardware_drivers package with revision for Cobot Project</description>

  <maintainer email="jcheng2020@my.fit.edu">Junfu Cheng</maintainer>

  <license>MIT</license>

  <author email="dexterong94@gmail.com">Dexter Ong</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  
</package>
