<?xml version="1.0"?>
<package>
  <name>gripper_hardware_interface</name>
  <version>0.0.1</version>
  <description>
    The gripper_hardware_interface package provides the hardware interface for
    running an Vex gripper using the ros_control software framework.
    Brand: VEX 
    MPN: 276-2212
    UPC-12: 807648022124
    https://www.rapidonline.com/vex-claw-kit-70-6333
    https://content.vexrobotics.com/docs/276-2600-Claw-Assembly.pdf
    https://www.vexrobotics.com/276-2600.html
  </description>

  <maintainer email="jcheng2020@my.fit.edu">Junfu Cheng</maintainer>

  <license>MIT</license>

  <author email="jcheng2020@my.fit.edu">Junfu Cheng</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>gripper_hardware_drivers</build_depend>

  <run_depend>hardware_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>gripper_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>transmission_interface</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>joint_limits_interface</run_depend>
  <run_depend>gripper_hardware_drivers</run_depend>

</package>
